--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
   padding: 2%;
   border: 2px solid #F06292;
   border-radius: 5px;
-  max-height: 300px;
+  max-height: 350px;
   min-width: 350px;
 }
 
@@ -64,7 +64,8 @@ button{
   font-size: 20px;
   font-family: georgia;
   font-weight: bold;
-  margin-top: 8%; 
+  margin-top: 5%;
+  margin-bottom: 2%;
 }
 
 
@@ -101,5 +102,8 @@ input[type="range"] {
       width: 100%;
       margin-top: 5%;
       max-width: 94%;
+  }
+  button{
+    margin-top: 2%;
   }
 }
