--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1{
 /*quiz*/
 #slider{
   flex-direction: column;
+  justify-content: center;
   text-align: center; 
   background-color: #FFE1EF;
   padding: 2%;
@@ -33,8 +34,13 @@ h2{
     padding-top: 5%;
 }
 
+h3{
+  text-align: left;
+}
+
 #flowerRecommendation {
   padding: 20px;
+  text-align: center;
   background-color: #fff9ed;
   border: 2px solid #F06292;
   border-radius: 5px;
@@ -50,7 +56,7 @@ h2{
 }
 
 #flowerRecommendation .flower-description {
-  margin-top: 10px;
+  margin-top: 20px;
   color: black;
   justify-content: center;
 }
