--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ h1{
   padding: 2%;
   border: 2px solid #F06292;
   border-radius: 5px;
-  max-height: 350px;
+  min-height:350px;
   min-width: 350px;
 }
-
+ 
 h2{
     padding-top: 5%;
 }
@@ -64,16 +64,27 @@ h3{
 button{
   background-color: #fff9ed;
   border: 2px solid #F06292;
-  border-radius: 5px;
-  min-width: 200px;
-  min-height: 30px;
+  border-radius: 50px;
+  width: 200px; 
+  height: 50px;
   font-size: 20px;
   font-family: georgia;
   font-weight: bold;
-  margin-top: 5%;
-  margin-bottom: 2%;
 }
 
+.button-container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+button:hover{
+  background-color: #F06292;
+  color: white;
+}
 
 #quiz{
   margin-top: 5%;
@@ -103,13 +114,11 @@ input[type="range"] {
   }
   #slider {
       width: 100%;
+      min-width:400px;
   }
   #flowerRecommendation {
       width: 100%;
       margin-top: 5%;
       max-width: 94%;
-  }
-  button{
-    margin-top: 2%;
   }
 }
